fixing tool stacking on mobile

--- a/themes/brevis/static/css/style.css
+++ b/themes/brevis/static/css/style.css
@@ -292,6 +292,7 @@ footer
   display: flex;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   padding: 10px;
+  flex-wrap  : wrap;
 }
 
 .tool-left {
